# reversi

./: README.md  reversi.cabal
cli/: Main.hs
src/: Board.hs  Coord.hs  Move.hs  Piece.hs  Point.hs  Reversi.hs  Rules.hs  Square.hs
src/Reversi/: Board.hs  Coord.hs  Move.hs  Piece.hs  Rules.hs
test/: BoardSpec.hs  CoordSpec.hs  MoveSpec.hs  PieceSpec.hs  PointSpec.hs  RulesSpec.hs  SquareSpec.hs
