name:                reversi
version:             0.1.0.0
synopsis:            Reversi is a classic board game
description:         Please see README.md
homepage:            http://github.com/githubuser/reversi#readme
license:             GPL
license-file:        LICENSE
author:              Mattias Harrysson
maintainer:          mathar@kth.se
copyright:           (c) Mattias Harrysson 2015
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Piece
                     , Coord
                     , Board
                     , Move
                     , Rules
                     , Reversi
  build-depends:       base >= 4.7 && < 5
                     , array
                     , mtl
  default-language:    Haskell2010

executable reversi
  hs-source-dirs:      cli
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , reversi
                     , mtl
  default-language:    Haskell2010

test-suite reversi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       PieceSpec
                     , CoordSpec
                     , BoardSpec
                     , MoveSpec
                     , RulesSpec
  build-depends:       base
                     , reversi
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mharrys/reversi
